fix social sharing sidebar visibility for small screens

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -151,7 +151,7 @@ h2 {
 /* hide social on small screens */
 @media (max-width: 480px) {
 	.social {
-		display: hidden;
+		display: none;
 	}
 }
 
